[package]
name = "transform-gizmo-bevy"
description = "bevy integration for transform-gizmo"
 
  
 
version = "0.5.0"
rust-version = "1.82.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/urholaukkarinen/transform-gizmo"
repository = "https://github.com/urholaukkarinen/transform-gizmo"
authors = ["Urho Laukkarinen <urho.laukkarinen@gmail.com>"]




categories = ["gui", "game-development", "game-engines"]
keywords = ["gizmo", "bevy"]
readme = "../../README.md"
include = [
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "**/*.rs",
    "**/*.wgsl",
    "Cargo.toml",
]

[dependencies]
transform-gizmo.workspace = true

bevy.workspace = true
bevy_app.workspace = true
bevy_core.workspace = true
bevy_core_pipeline.workspace = true
bevy_reflect.workspace = true
bevy_math.workspace = true
bevy_render.workspace = true
bevy_input.workspace = true
bevy_asset.workspace = true
bevy_utils.workspace = true
bevy_pbr.workspace = true
bevy_ecs.workspace = true
bevy_log.workspace = true
bevy_window.workspace = true
bevy_transform.workspace = true
bytemuck.workspace = true
uuid.workspace = true

[dev-dependencies]
bevy = "0.15"

[lints]
workspace = true