[package]
name = "transform-gizmo-bevy"
description = "bevy integration for transform-gizmo"
 
  
 
version = "0.5.0"
rust-version = "1.82.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/urholaukkarinen/transform-gizmo"
repository = "https://github.com/urholaukkarinen/transform-gizmo"
authors = ["Urho Laukkarinen <urho.laukkarinen@gmail.com>"]




categories = ["gui", "game-development", "game-engines"]
keywords = ["gizmo", "bevy"]
readme = "../../README.md"
include = [
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "**/*.rs",
    "**/*.wgsl",
    "Cargo.toml",
]

[dependencies]
transform-gizmo.workspace = true


bevy = "0.15"

bevy_app = "0.15"
bevy_core = "0.15"
bevy_core_pipeline = "0.15"
bevy_reflect = "0.15"
bevy_math = "0.15"
bevy_render = "0.15"
bevy_input = "0.15"
bevy_asset = "0.15"
bevy_utils = "0.15"
bevy_pbr = "0.15"
bevy_ecs = "0.15"
bevy_log = "0.15"
bevy_window = "0.15"
bevy_transform = "0.15"

bytemuck = "1.5"
uuid = "1.1"

[dev-dependencies]
bevy = "0.15"

[lints]
workspace = true